# Prueba-Intelligential

./: PagoModel.py  README.md  config.py  conftest.py  main.py  pyproject.toml  readme.md  sandbox.ipynb
code/tests/: main.py
src/: PagoModel.py  build_database.py  config.py  dags.py  main.py
tests/: main.py  test_main.py
